homePage form less cancel function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/homePage.css">
 </head>
 <body>
   <nav class="nav">
@@ -60,7 +61,111 @@
     </div>
   </header>
   <main class="content">
-
+    <article class="homePage">
+      <section id="feature" class="feature">
+        <div class="width-limit">
+          <div class="feature-title">
+            <h2>
+              客人總是在詢問<br>
+              這麼好吃的秘訣是什麼
+            </h2>
+          </div>
+          <div class="feature-content">
+            <div class="feature-content-block">
+              <img src="./img/feature_1.png" alt="">
+              <h3>台灣本土蔬菜</h3>
+              <p>
+                In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.
+              </p>  
+            </div>
+            <div class="feature-content-block">
+              <img src="./img/feature_2.png" alt="">
+              <h3>專業米其林廚師</h3>
+              <p>
+                Sed ullamcorper tellus erat, non ultrices sem tincidunt euismod. Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.            </p>  
+            </div>
+            <div class="feature-content-block">
+              <img src="./img/feature_3.png" alt="">
+              <h3>對於專業不能退讓</h3>
+              <p>
+                Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.            </p>  
+            </div>
+          </div>
+        </div>
+      </section>  
+      <section id="chef" class="chef">
+        <div class="width-limit">
+          <div class="chef-img"></div>
+          <div class="chef-content">
+            <h2>今日主廚：帕金森、梅在帕</h2>
+            <h3>Tody Chef: Plum in Shock</h3>
+            <p>Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. Mauris molestie sit amet metus mattis varius. Donec sit amet ligula eget nisi sodales egestas. Aliquam interdum dolor aliquet dolor sollicitudin fermentum. Donec congue lorem a molestie bibendum.</p>
+          </div>
+        </div>
+      </section>
+      <section class="experience">
+        <div class="width-limit">
+          <h2>聽聽別人的感想</h2>
+          <div class="experience-content">
+            <div class="experience-block">
+              <img src="./img/avatar_1.png" alt="">
+              <div>
+                <h3>高雄一口吃</h3>  
+                <p class="experience-comment">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                <p> -- 產品經理</p>
+              </div>
+            </div>
+            <div class="experience-block">
+              <img src="./img/avatar_2.png" alt="">
+              <div>
+                <h3>廟口小霸王</h3>  
+                <p class="experience-comment">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                <p> -- 金身道士</p>
+              </div>
+            </div>
+            <div class="experience-block">
+              <img src="./img/avatar_3.png" alt="">
+              <div>
+                <h3>春天也來了</h3>  
+                <p class="experience-comment">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                <p> -- 美麗萬分</p>
+              </div>
+            </div>
+          </div>
+      </section>
+      <section id="map" class="map">
+        <div class="width-limit">
+          <h2>
+            我們的位置不太夠坐<br>
+            要不要先訂位呢？
+          </h2>
+          <div class="map-content">
+            <div class="map-img"></div>
+            <form class="form" action="index.html">
+              <label for="name">姓名</label>
+              <input id="name" type="text" placeholder="六角講師吃尾牙" name="name">  
+              <label for="tel">電話</label>
+              <input id="tel" type="tel" placeholder="02-1234567" name="tel">  
+              <label for="email">信箱</label>
+              <input id="email" type="email" placeholder="test@gmail.com" name="email">  
+              <label for="people">人數</label>
+              <input id="people" type="number" name="people">  
+              <label for="vegetarianDiet">是否需要素食</label>
+              <div>
+                <label for="vegetarianDiet-yes">是</label>
+                <input id="vegetarianDiet-yes" type="radio" name="vegetarianDiet" value="yes">  
+                <label for="vegetarianDiet-no">否</label>
+                <input id="vegetarianDiet-no" type="radio" name="vegetarianDiet" value="no">  
+              </div>
+              <div class="map-btn">
+                <button class="btn btn-gray">取消</button>
+                <button class="btn btn-orange" type="submit">送出</button>
+              </div>
+            </form>  
+          </div>
+        </div>
+      </section>
+    </article>
   </main>
   <footer class="footer">
     <div class="width-limit">
