--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
     </div>
   </header>
   <main class="content">
-    <div class="login">
+    <article class="login">
       <h1>六角西餐廳</h1>
       <h2>享受美食好味道</h2>
       <div class="login-block">
@@ -81,12 +81,12 @@
             <a href="#">忘記密碼？</a>
           </div>
           <div class="login-btn">
-            <button class="login-btn-register" type="button" onclick="self.location.href='register.html'">註冊</button>
-            <button class="login-btn-login" type="submit">登入</button>
+            <button class="btn btn-gray login-btn-register" type="button" onclick="self.location.href='register.html'">註冊</button>
+            <button class="btn btn-orange" type="submit">登入</button>
           </div>
         </form>
       </div>
-    </div>
+    </article>
   </main>
   <footer class="footer">
     <div class="width-limit">
