--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
     </div>
   </header>
   <main class="content">
-    <div class="register">
+    <article class="register">
       <h1>六角西餐廳</h1>
       <h2>享受美食好味道</h2>
       <div class="register-block">
@@ -90,12 +90,12 @@
               <a href="login.html">已經有帳號了？</a>
             </div>
             <div class="register-btn">
-              <button type="submit">註冊</button>
+              <button class="btn btn-orange" type="submit">註冊</button>
             </div>  
           </form>
         </div>
       </div>
-    </div>
+    </article>
   </main>
   <footer class="footer">
     <div class="width-limit">
