order page finish

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </h1>
       <ul class="nav-list">
         <li>
-          <a id="nav-index" href="index.html">首頁 <span class="fa fa-angle-down"></span></a>
+          <a id="nav-index" href="#">首頁 <span class="fa fa-angle-down"></span></a>
           <ul class="nav-sublist">
             <li>
               <a href="index.html#feature">特色</a>
@@ -47,6 +47,9 @@
           <a href="login.html">登入</a>
         </li>
       </ul>
+      <div class="nav-ham">
+        <span></span><span></span><span></span><span></span>
+      </div>
     </div>
   </nav>
   <header class="header">
@@ -185,9 +188,9 @@
         <h1>
           <a href="index.html">六角西餐廳</a>
         </h1>
-        <a href="#" class="fa fa-google-plus-square"></a>
-        <a href="#" class="fa fa-twitter-square"></a>
-        <a href="#" class="fa fa-facebook-square"></a>
+        <a href="https://www.hexschool.com/" class="fa fa-google-plus-square" target="_blank"></a>
+        <a href="https://twitter.com/hexschool1" class="fa fa-twitter-square" target="_blank"></a>
+        <a href="https://www.facebook.com/hexschool" class="fa fa-facebook-square" target="_blank"></a>
       </div>
     </div>
   </footer>
