--- a/order.html
+++ b/order.html
@@ -17,6 +17,7 @@
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/order.css">
 </head>
 <body>
   <nav class="nav">
@@ -60,7 +61,86 @@
     </div>
   </header>
   <main class="content">
-
+    <article class="order">
+      <div class="width-limit">
+        <aside class="order-class">
+          <div>
+            <img src="./img/order_icon.png" alt="">
+            <h2>線上訂購美食</h2>
+          </div>
+          <ul>
+            <li>全部 (23)</li>
+            <li>只愛吃薯條 (18)</li>
+            <li>加熱就可食 (1)</li>
+            <li class="active">不敗漢堡系列 (4)</li>
+          </ul>
+        </aside>
+        <section class="order-content">
+          <div class="order-title">
+            <div class="order-search">
+              <input type="text">
+              <div>
+                <i class="fa fa-search"></i>
+              </div>
+            </div>
+            <div class="order-cart">
+              <a href="#">結帳去</a>
+              <div class="line"></div>
+              <a class="fa fa-shopping-cart" href="#"></a>
+            </div>
+          </div>
+          <div class="order-blocks">
+            <div class="order-block">
+              <div class="order-label">
+                <div class="order-label-text">熱銷美食</div>
+              </div>
+              <i class="fa fa-heart-o"></i>
+              <div class="order-img order-img-1"></div>
+              <h2>經典漢堡套餐</h2>
+              <h3>Classic Hamburger Package</h3>
+              <div class="line"></div>
+              <p>$<span>120</span></p>
+              <button class="order-btn">
+                <i class="fa fa-shopping-cart"></i>加入購物車
+              </button>
+            </div>
+            <div class="order-block">
+              <i class="fa fa-heart-o"></i>
+              <div class="order-img order-img-2"></div>
+              <h2>英俊香腸</h2>
+              <h3>Handsome Sausage</h3>
+              <div class="line"></div>
+              <p>$<span>1,024</span></p>
+              <button class="order-btn">
+                <i class="fa fa-shopping-cart"></i>加入購物車
+              </button>
+            </div>
+            <div class="order-block">
+              <i class="fa fa-heart-o"></i>
+              <div class="order-img order-img-3"></div>
+              <h2>漢堡兄弟</h2>
+              <h3>Hamburg Brothers</h3>
+              <div class="line"></div>
+              <p>$<span>792</span></p>
+              <button class="order-btn">
+                <i class="fa fa-shopping-cart"></i>加入購物車
+              </button>
+            </div>
+            <div class="order-block">
+              <i class="fa fa-heart-o"></i>
+              <div class="order-img order-img-4"></div>
+              <h2>完美願望</h2>
+              <h3>Dragon Ball Package</h3>
+              <div class="line"></div>
+              <p>$<span>999,999</span></p>
+              <button class="order-btn">
+                <i class="fa fa-shopping-cart"></i>加入購物車
+              </button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </article>
   </main>
   <footer class="footer">
     <div class="width-limit">
@@ -80,9 +160,9 @@
         <h1>
           <a href="index.html">六角西餐廳</a>
         </h1>
-        <a href="#" class="fa fa-google-plus-square"></a>
-        <a href="#" class="fa fa-twitter-square"></a>
-        <a href="#" class="fa fa-facebook-square"></a>
+        <a href="https://www.hexschool.com/" class="fa fa-google-plus-square" target="_blank"></a>
+        <a href="https://twitter.com/hexschool1" class="fa fa-twitter-square" target="_blank"></a>
+        <a href="https://www.facebook.com/hexschool" class="fa fa-facebook-square" target="_blank"></a>
       </div>
     </div>
   </footer>
