--- a/register.html
+++ b/register.html
@@ -115,9 +115,9 @@
         <h1>
           <a href="index.html">六角西餐廳</a>
         </h1>
-        <a href="#" class="fa fa-google-plus-square"></a>
-        <a href="#" class="fa fa-twitter-square"></a>
-        <a href="#" class="fa fa-facebook-square"></a>
+        <a href="https://www.hexschool.com/" class="fa fa-google-plus-square" target="_blank"></a>
+        <a href="https://twitter.com/hexschool1" class="fa fa-twitter-square" target="_blank"></a>
+        <a href="https://www.facebook.com/hexschool" class="fa fa-facebook-square" target="_blank"></a>
       </div>
     </div>
   </footer>
