layouot & homePage rwd finish

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </h1>
       <ul class="nav-list">
         <li>
-          <a id="nav-index" href="#">首頁 <span class="fa fa-angle-down"></span></a>
+          <a id="nav-index">首頁 <span class="fa fa-angle-down"></span></a>
           <ul class="nav-sublist">
             <li>
               <a href="index.html#feature">特色</a>
@@ -154,7 +154,7 @@
               <label for="people">人數</label>
               <input id="people" type="number" name="people">  
               <label for="vegetarianDiet">是否需要素食</label>
-              <div>
+              <div class="map-radio">
                 <label for="vegetarianDiet-yes">是</label>
                 <input id="vegetarianDiet-yes" type="radio" name="vegetarianDiet" value="yes">  
                 <label for="vegetarianDiet-no">否</label>
