--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
       </h1>
       <ul class="nav-list">
         <li>
-          <a id="nav-index" href="index.html">首頁 <span class="fa fa-angle-down"></span></a>
+          <a id="nav-index">首頁 <span class="fa fa-angle-down"></span></a>
           <ul class="nav-sublist">
             <li>
               <a href="index.html#feature">特色</a>
@@ -47,6 +47,9 @@
           <a href="login.html">登入</a>
         </li>
       </ul>
+      <div class="nav-ham">
+        <span></span><span></span><span></span><span></span>
+      </div>
     </div>
   </nav>
   <header class="header">
