--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </h2>
           <div class="map-content">
             <div class="map-img"></div>
-            <form class="form" action="index.html">
+            <form id="map-form" class="form" action="index.html">
               <label for="name">姓名</label>
               <input id="name" type="text" placeholder="六角講師吃尾牙" name="name">  
               <label for="tel">電話</label>
@@ -161,7 +161,7 @@
                 <input id="vegetarianDiet-no" type="radio" name="vegetarianDiet" value="no">  
               </div>
               <div class="map-btn">
-                <button class="btn btn-gray">取消</button>
+                <button id="form-cancel" class="btn btn-gray" type="button">取消</button>
                 <button class="btn btn-orange" type="submit">送出</button>
               </div>
             </form>  
