--- a/login.html
+++ b/login.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>六角實習 作業三</title>
-  <link rel="shortcut icon" href="./img/logo-s.png"/>
-  <link rel="apple-touch-icon" href="./img/logo-s.png"/>
+  <link rel="shortcut icon" href="./img/logo_s.png"/>
+  <link rel="apple-touch-icon" href="./img/logo_s.png"/>
   <meta name='description' content="六角實習 作業三 RWD" />
 
   <meta property="og:title" content="六角實習 作業三" />
   <meta property="og:description" content="RWD">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="FB上的網址" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="./img/logo_l.png" />
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/main.css">
