edit nav-list rwd

--- a/order.html
+++ b/order.html
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="order-cart">
-              <a href="#">結帳去</a>
+              <a class="order-check" href="#">結帳去</a>
               <div class="line"></div>
               <a class="fa fa-shopping-cart" href="#"></a>
             </div>
